# 8080-Tools

./: CMakeLists.txt  README.md  cpudiag.asm  instructionTests.txt
8080disassembler/: Disassemble8080.c  Disassemble8080.h  main.c
8080emulator/src/: handleState.c  intDefs.h
src/: handleSnapshots.c  handleSnapshots.h  handleState.c  handleState.h  intDefs.h  main.c  opcodes.c  opcodes.h
testing_roms/: cpudiag.asm
